[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-scanner"
version = "0.1.0"
description = "A simple, polished LAN scanner with persistent device tracking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "network_scanner contributors" }]
dependencies = []

[project.optional-dependencies]
fancy = ["rich>=13.7"]
dev = ["pytest>=8.0"]

[project.scripts]
netscan = "network_scanner.cli:main"

[tool.setuptools.packages.find]
include = ["network_scanner*"]
